chore: ui stuff

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
       rel="stylesheet"
       href="https://bootswatch.com/5/united/bootstrap.min.css"
     />
-    <title>Copy to Excel</title>
+    <title>Paste excel data to html table</title>
   </head>
   <body>
     <div class="card">
-      <div class="card-header bg-success d-flex">
+      <div
+        class="card-header bg-warning d-flex"
+        style="justify-content: space-between"
+      >
         <div class="ml-auto">
           <h5 class="card-title">Stock Items</h5>
         </div>
-        <div class="mr-auto d-flex-grow-1">
+        <div class="mr-auto">
           <button class="btn btn-xs btn-sm btn-danger logger">
-            Log to console..
+            Log to console...
           </button>
         </div>
       </div>
