--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         style="justify-content: space-between"
       >
         <div class="ml-auto">
-          <h5 class="card-title">Paste anywere to continue...</h5>
+          <h5 class="card-title">Paste anywhere to continue...</h5>
         </div>
         <div class="mr-auto">
           <button class="btn btn-xs btn-sm btn-danger logger">
