--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       </div>
       <div class="card-body p-0">
         <table class="table table-hover table-bordered mb-0">
-          <thead>
-            <tr></tr>
-          </thead>
+          <thead></thead>
           <tbody></tbody>
         </table>
       </div>
