chore: excel import

--- a/index.html
+++ b/index.html
@@ -11,26 +11,101 @@
     <title>Paste excel data to html table</title>
   </head>
   <body>
-    <div class="card paste-target" contenteditable="true">
-      <div
-        class="card-header bg-warning d-flex"
-        style="justify-content: space-between"
-      >
-        <div class="ml-auto">
-          <h5 class="card-title">Paste anywhere to continue...</h5>
-        </div>
-        <div class="mr-auto">
-          <button class="btn btn-xs btn-sm btn-danger logger">
-            Log to console...
-          </button>
-        </div>
-      </div>
-      <div class="card-body p-0">
-        <table class="table table-hover table-bordered mb-0">
-          <thead></thead>
-          <tbody></tbody>
-        </table>
-      </div>
+    <div class="mx-auto col-8 mt-4">
+      <table class="table table-sm table-bordered table-strriped">
+        <thead class="bg-warning">
+          <tr>
+            <th>Barcode</th>
+            <th>Product</th>
+            <th>Unit</th>
+            <th>Quantity</th>
+            <th>Rate</th>
+            <th>NetAmount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+            <td>
+              <input type="text" class="form-control form-control-sm" />
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <script src="./script.js"></script>
   </body>
