feat: sheet clear

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Paste excel data to html table</title>
   </head>
   <body>
-    <div class="mx-auto col-8 mt-4">
+    <div class="mx-auto col-8 mt-4 d-block">
+      <button class="btn btn-success btn-sm">Clear</button>
       <table class="table table-sm table-bordered table-strriped">
         <thead class="bg-warning">
           <tr>
@@ -67,6 +68,7 @@
         </tbody>
       </table>
     </div>
+    
     <script src="./script.js"></script>
   </body>
 </html>
