--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </tr>
         </tbody>
     </table>
+    <hr>
+    <var id="preview" class="align-item-center">
+
+    </var>
 </div>
 
 <script src="./script.js"></script>
